--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "async": "^3.2.4",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
-    "config": "^1.31.0",
+    "bson": "^5.3.0",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
-    "joi": "^14.3.1",
-    "joi-objectid": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.7.4",
-    "winston": "^2.4.0",
-    "winston-mongodb": "^3.0.0"
+    "joi": "^17.9.2",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^7.3.0",
+    "mpath": "^0.9.0",
+    "mquery": "^5.0.0",
+    "winston": "^3.9.0",
+    "winston-mongodb": "^5.1.1"
   },
   "description": ""
 }
